--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -40,9 +40,6 @@
     /* 3 */
     -webkit-text-size-adjust: 100%;
 
-    /* 3 */
-
-    overflow: hidden;
   }
 
   /* Sections
